--- a/package.json
+++ b/package.json
@@ -6,24 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "prisma db push",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "^5.22.0",
+    "bcryptjs": "^3.0.3",
     "framer-motion": "^12.18.1",
     "next": "15.3.4",
+    "next-auth": "^5.0.0-beta.30",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-hook-form": "^7.69.0",
+    "react-icons": "^5.5.0",
+    "zod": "^4.2.1"
   },
-"devDependencies": {
+  "devDependencies": {
+    "@prisma/config": "^7.2.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8.4.38",        
-    "tailwindcss": "^3.4.4",     
-    "autoprefixer": "^10.4.19",  
-    "typescript": "^5"
+    "postcss": "^8.4.38",
+    "prisma": "^5.22.0",
+    "tailwindcss": "^3.4.4",
+    "tsx": "^4.21.0",
+    "typescript": "^5",
+    "zod": "^4.2.1"
   }
 }
