--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma migrate deploy && npm run db:seed && next build",
+    "build": "node scripts/build.js",
     "start": "next start",
     "lint": "next lint",
     "db:push": "prisma db push",
